# $Id$

2009-02-10	Vladlen Y. Koshelev

	* main/Flow/MultiPrefixPhpViewResolver.class.php: makeView() hook and
	isPrefixDisabled() added.

2008-02-06	Denis M. Gabaidulin

	* main/Utils/SortHelper.class.php: sorting multi-dimensional assoc array
	recursively.

2008-02-05	Denis M. Gabaidulin

	* main/Utils/DateUtils.class.php: makeDatesListByRange() added.
	Function used to create normalized date list by IntervalUnit.

2008-02-04	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: makeCartesianProduct() function added.

2009-01-28	Ivan Y. Khvostishkov

	* main/Base/DateRange.class.php: safeSetStart(), safeSetEnd() to ensure
	that the start will never overlaps the end.

2008-01-20	Denis M. Gabaidulin

	* main/Utils/Mobile/MobileRequestDetector.class.php: use regular array
	instead HttpRequest. Warning: Broken BC!

2008-01-19	Denis M. Gabaidulin

	* core/Form/Filters/UnserializeFilter.class.php: added.

2009-01-19	Vladlen Y. Koshelev

	* main/Base/LightMetaProperty.class.php: makePrimitive() added.

	* core/Form/Primitive.class.php: prototyped() and prototypedIdentifier() - 
	shortcuts for making object's properties primitives.

2009-01-19	Konstantin V. Arkhipov

	* meta/types/InetType.class.php: goes sizeless.

2009-01-17	Vladlen Y. Koshelev

	* main/UnifiedContainer/UnifiedContainerWorker.class.php,
	test/misc/DAOTest.class.php: generate distinct count query in case of
	container's criteria is distinct; unified container count-tests added. 

2009-01-15	Vladlen Y. Koshelev

	* main/OQL/Expressions/OqlQueryParameter.class.php: "in" expression supports
	arrays.

2009-01-14	Denis M. Gabaidulin

	* main/Math/MathUtils.class.php: fisherYatesShuffle()
	Fisher Yates shuffle algorithm implementation.

	* core/Base/IntervalUnit.class.php,
	core/OSQL/TimeIntervalsGenerator: support Date/DateRange types.

2009-01-10	Vladlen Y. Koshelev

	* main/OQL/Parsers/OqlTokenizer.class.php: tokenizer simplified and